--- a/assets/sass/elements/_two-col-layout.scss
+++ b/assets/sass/elements/_two-col-layout.scss
@@ -7,9 +7,11 @@
         .columns_wrap {
             display: flex;
             justify-content: center;
+            gap: 5rem;
 
             @include media($tablet) {
                 flex-wrap: wrap;
+                gap: 0;
             }
 
             .column {
